@@ -1,6 +1,12 @@
 = Changelog
 
-== Down with Disease
+== Esther
+
+- Updated to Android 33
+- Increased HTTP cache size
+- Update HTTP client to have no built in time out, allowing images to load in background for as long as they need
+
+== Down with Disease 12/24/2022
 
 - Upgraded dependencies to latest versions
 - Updated to Android 31
